# pemfc-core

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  environment.yml  main_app.py  pyproject.toml  requirements.txt  setup.py  todo.md
.github/workflows/: ci.yml
auxiliary/: channel_heat_transfer_simulation.py  channel_simulation.py  check_convergence_evolution.py  check_saturation_evolution.py  flow_circuit_simulation.py  flow_circuit_simulation_compare_paper.py  flow_circuit_simulation_resistance_variation.py  fluid_libs_comparison.py  humid_air_pressure_drop.py  import_pemfc.py  parameter_variation.py  plot_in_plane_distributions.py
pemfc/: __init__.py  channel_heat_transfer_simulation.py  channel_simulation.py  flow_circuit_simulation.py  flow_circuit_simulation_compare_paper.py  gui_app.py  main_app.py  setup.py
pemfc/dash/: dash_app.py  dash_functions.py  dash_layout.py  dash_modal.py  dash_run.py
pemfc/data/: __init__.py  gas_properties.py  input_dicts.py  material_properties.py  water_properties.py
pemfc/gui/: base.py  button.py  data_transfer.py  entry_value.py  frame.py  widget_factory.py  widget_set.py
pemfc/settings/: geometry.py  operating_conditions.py  output.py  physical_properties.py  settings.json  settings_storage.json  simulation.py  two_phase_settings.json
pemfc/src/: cell.py  channel.py  constants.py  diffusion.py  diffusion_transport.py  discretization.py  electrical_coupling.py  electrochemistry.py  electrochemistry_model.py  flow_circuit.py  flow_field.py  flow_resistance.py  fluid.py  global_functions.py  global_state.py  grid_rescaler.py  half_cell.py  interpolation.py  layers.py  linear_system.py  matrix_functions.py  membrane.py  output.py  output_object.py  porous_two_phase_flow.py  simulation.py  solid.py  solid_layer.py  (+5 more)
tests/: diffusion.py  diffusion_test.py  fluid_libs_comparison.py  results.json  saturation_pressure.py  settings.json  summary.json  test_fluid_lib.py  test_main.py
(+23 files in other folders)
